tests/fixtures/invalid/str_floordiv_str.py
# Cannot floor divide Str and Str
x: str = "hello" // "hello"
